Transfer example to ROI page.

--- a/vignettes/ColinearityInterruptors.Rmd
+++ b/vignettes/ColinearityInterruptors.Rmd
@@ -254,3 +254,23 @@ ROI6[1:6] |> plotApairOfChrs()
 ROI6[1:6] |> dplyr::mutate(strand = '*') |> coalesce_contigs() |> plotApairOfChrs()
 ```
 
+
+# Multiple inversions in a row cause flag inflation (ROI7)
+
+3 consecutive inversions will cause 5 flags to be set to TRUE.  Think:
+
+```
++ + + + + + + + +  →  + - + - + - + + +
+                      T T T T T F F F F
+```
+
+```{r}
+ROI7 <- coa$Oki_Osa |> flagInversions() |> dist2next(ignore.strand = TRUE)
+
+showInversions(ROI7)
+
+ROI7[35:45] |> as.data.frame()
+ROI7[37:43] |> plotApairOfChrs()
+
+showInversions(ROI7)
+```
