More inversions detected as evolutionary distance increases.

--- a/vignettes/Inversions.Rmd
+++ b/vignettes/Inversions.Rmd
@@ -54,9 +54,27 @@ where `+ - +` was `+ - - +` before collapsing.
 The number of detected inversions is further increased after double-coalescing.
 
 ```{r detect_trivial_invertions}
-sapply(gbs,  function(gb) sum(flagInversions(gb)$inv))
-sapply(coa,  function(gb) sum(flagInversions(gb)$inv))
-sapply(coa2, function(gb) sum(flagInversions(gb)$inv))
+(invs_summary <- data.frame(
+  align  = sapply(gbs,  function(gb) sum(flagInversions(gb)$inv)),
+  mapped = sapply(coa,  function(gb) sum(flagInversions(gb)$inv)),
+  map2   = sapply(coa2, function(gb) sum(flagInversions(gb)$inv))
+))
+
+compDistance <- function(x) {
+  x[x %in% c("Oki_Kum", "Osa_Aom", "Bar_Nor")]                       <- "same_pop"
+  x[x %in% c("Oki_Osa", "Oki_Bar", "Oki_Kum", "Oki_Aom", "Oki_Nor",
+             "Osa_Oki", "Osa_Kum", "Bar_Oki", "Bar_Kum")]            <- "Oki – North"
+  x[x %in% c( "Osa_Bar", "Osa_Aom", "Osa_Nor",
+              "Bar_Osa", "Bar_Aom", "Bar_Nor")]                      <- "North – North"
+  x
+}
+
+invs_summary$pairname  <- compDistance(rownames(invs_summary))
+invs_summary$target    <- sub("_.*", "", rownames(invs_summary))
+
+ggplot(invs_summary |> tidyr::pivot_longer(c("align", "mapped", "map2"))) +
+  aes(value, name) + geom_point(aes(col = pairname, pch = target)) +
+  ggtitle ("Number of inversions found after different post-processings")
 ```
 
 ## Motif search
