--- a/vignettes/ColinearityInterruptors.Rmd
+++ b/vignettes/ColinearityInterruptors.Rmd
@@ -34,6 +34,7 @@ suppressPackageStartupMessages({
 genomes <- OikScrambling:::loadAllGenomes()
 load("BreakPoints.Rdata")
 reps <- OikScrambling:::loadAllRepeats()
+annots <- OikScrambling:::loadAllAnnotations()
 ```
 
 # The problem:
