Restore loading of pre-computed PWMs.

--- a/vignettes/OikScrambling.Rmd
+++ b/vignettes/OikScrambling.Rmd
@@ -545,6 +545,7 @@ centred alignment stops.
 #current_GB <- gr_Oki_O # To ease recomputing with another object
 current_GB <- gbs$Oki_Osa
 #current_GB <- coa$Oki_Osa
+gadems.invLeftGap <- readRDS("gadems.invLeftGap.Rda")
 pwm <- gadems.invLeftGap$Oki_Osa[[1]]
 pwm@consensus
 pwmHits <- matchPWM(pwm = rGADEM::getPWM(pwm), genomes$Oki)
