--- a/vignettes/LoadGenomicBreaks.Rmd
+++ b/vignettes/LoadGenomicBreaks.Rmd
@@ -426,7 +426,7 @@ Save data
 =========
 
 ```{r save_data}
-save(gbs, unal, coa, unmap, unalMap, tra, coa2, longShort, file = "BreakPoints.Rdata")
+save(gbs, unal, coa, unmap, unalMap, tra, coa2, unmap2, longShort, file = "BreakPoints.Rdata")
 system("echo '6f0108034e8d8e531f0d50f3fdac1b65  BreakPoints.Rdata' | md5sum -c", intern = TRUE)
 ```
 
