Correct package name.

--- a/vignettes/ColinearityInterruptors.Rmd
+++ b/vignettes/ColinearityInterruptors.Rmd
@@ -21,7 +21,7 @@ knitr::opts_knit$set(verbose = TRUE)
 See the `vignette("OikScrambling", package = "OikScrambling")` for general
 details on package and data load.
 
-See `vignette("LoadGenomicBreaks", package = "OikSyntenies")` for how the
+See `vignette("LoadGenomicBreaks", package = "OikScrambling")` for how the
 different `GBreaks` objects are prepared.
 
 ```{r load_pacakges_and_data}
@@ -49,7 +49,7 @@ plotApairOfChrs(coa$Oki_Kum, "chr1", main = "Oki – Kum")
 
 In this vignette, we look at a couple of example regions in details.  These
 regions helped me to decide how to process the data in _Load Genomic Breaks_
-(`vignette("LoadGenomicBreaks", package = "OikSyntenies")` and to decide
+(`vignette("LoadGenomicBreaks", package = "OikScrambling")` and to decide
 which analysis to prioritise elsewhere.
 
 # Alignments are real (Region of Interest 1)
