--- a/vignettes/OikScrambling.Rmd
+++ b/vignettes/OikScrambling.Rmd
@@ -90,7 +90,7 @@ install.packages("BreakpointsData", repos="https://oist.github.io/plessy_oikgeno
 ### GenomicBreaks object
 
 The core data is a list of `GenomicBreaks::GBreaks()` objects that is built
-by a separate vignette (`vignette("Load genomic break data"), package="OikSyntenies"`).
+by a separate vignette (`vignette("Load genomic break data"), package="OikScrambling"`).
 
 The _query_ genome is the one that was provided as a FASTA file and aligned to
 the _target_ genome (the one that was indexed by the aligner).  The _target_
@@ -137,7 +137,7 @@ during recombination.
 
 # Measures of distance
 
-See `vignette("DistanceMeasures"), package="OikSyntenies"`.
+See `vignette("DistanceMeasures"), package="OikScrambling"`.
 
 # Phylogenetic cladogram
 
@@ -206,11 +206,11 @@ sapply(coa, length)
 
 # Width summary plots
 
-See `vignette("RegionWidths"), package="OikSyntenies"`.
+See `vignette("RegionWidths"), package="OikScrambling"`.
 
 # Repeats
 
-See `vignette("RepeatRegions"), package="OikSyntenies"`.
+See `vignette("RepeatRegions"), package="OikScrambling"`.
 
 
 
