--- a/vignettes/RepeatRegions.Rmd
+++ b/vignettes/RepeatRegions.Rmd
@@ -31,7 +31,7 @@ library('OikScrambling') |> suppressPackageStartupMessages()
 (load("BreakPoints.Rdata"))
 ```
 
-See `vignette("LoadGenomicBreaks", package = "OikSyntenies")` for how the
+See `vignette("LoadGenomicBreaks", package = "OikScrambling")` for how the
 different GBreaks objects are prepared.
 
 # Repeat
@@ -361,7 +361,7 @@ UpSetR::upset(traRepsBar)
 
 # Repeat annotation of the GBreaks objects
 
-See `vignette("LoadGenomicBreaks", package = "OikSyntenies")` for how the
+See `vignette("LoadGenomicBreaks", package = "OikScrambling")` for how the
 different GBreaks objects are annotated.
 
 ```{r gbreaks_annot}
