--- a/vignettes/OikScrambling.Rmd
+++ b/vignettes/OikScrambling.Rmd
@@ -137,7 +137,7 @@ during recombination.
 
 # Measures of distance
 
-See `vignette("DistanceMeasures"), package="OikScrambling"`.
+See `vignette("DistanceMeasures", package="OikScrambling")`.
 
 # Phylogenetic cladogram
 
