--- a/vignettes/ParallelPlots.Rmd
+++ b/vignettes/ParallelPlots.Rmd
@@ -27,83 +27,12 @@ which is fully documented at: <https://oist.github.io/GenomicBreaks>.
 
 ## Load pacakges
 
-### Core packages that provide functions we use a lot.
+# Load R pacakges and data
 
-```{r loadlib, echo=T, results='hide'}
-suppressPackageStartupMessages({
-  library('GenomicBreaks')
-  library('BSgenome')
-  library('GenomicFeatures')
-  library('ggplot2')
-})
-```
-
-### BSgenome packages
-
-BSgenome packages will be automatically attached together when the `GBreaks`
-objects will be loaded.
-
-## Load and prepare data
-
-### Genome annotations.
-
-The annotations from `/bucket/LuscombeU/common/Breakpoints/Annotations` are
-distributed in the same drat repository as the alignment data.
-
-```
-install.packages("BreakpointsData", repos="https://oist.github.io/plessy_oikgenomes_drat/")
-```
-
-```{r load_annotations, warning=FALSE}
-# annots <- SimpleList()
-# 
-# gff2txdb <- function(file, genome) {
-#   file <- system.file(paste0("extdata/Annotations/", file), package = "BreakpointsData")
-#   tx <- rtracklayer::import.gff(file)
-#   tx <- tx[seqnames(tx) %in% seqnames(genome)]
-#   tx <- GRanges(tx, seqinfo = seqinfo(genome))
-#   tx <- GenomicFeatures::makeTxDbFromGRanges(tx)
-# }
-# 
-# gff2txdb_Norway <- function(file, genome) {
-#   file <- system.file(paste0("extdata/Annotations/", file), package = "BreakpointsData")
-#   tx <- rtracklayer::import.gff(file)
-#   tx <- tx[!is.na(tx$mRNA)]
-#   # Remove "scaffoldA" objects in the OdB3 annotation
-#   tx <- tx[seqnames(tx) %in% seqnames(genome)]
-#   tx$ID <- tx$mRNA
-#   tx <- GRanges(tx, seqinfo = seqinfo(genome))
-#   tx <- GenomicFeatures::makeTxDbFromGRanges(tx)
-# }
-# 
-# annots$Oki <- gff2txdb("OKI2018_I69.v2/OKI2018_I69.v2.gm.gff.gz",  OKI2018_I69)
-# annots$Osa <- gff2txdb("OSKA2016v1.9/OSKA2016v1.9.gm.gff.gz",      OSKA2016v1.9)
-# annots$Bar <- gff2txdb("Bar2_p4.Flye/Bar2_p4.Flye.gm.gff.gz",      Bar2_p4)
-# annots$Kum <- gff2txdb("KUM-M3-7f/KUM-M3-7f.gm.gff.gz",            KUM_M3)
-# annots$Aom <- gff2txdb("AOM-5-5f/AOM-5-5f.gm.gff.gz",              AOM_5)
-# annots$Nor <- gff2txdb_Norway("OdB3/Oikopleura_annot_v1.0.gff.gz", OdB3)
-```
-
-### GenomicBreaks objects
-
-The core data is a list of `GenomicBreaks::GBreak()` objects that is built
-by a separate vignette (`vignette("Load genomic break data")`).
-
-```{r GBreaks_object}
-load("BreakPoints.Rdata")
-```
-
-### Long and short arms
-
-The long and short arms are annotated in the `GBreak` objects that are built
-by the vignette (`vignette("Load genomic break data")`), using the function
-`GenomicBreaks::flagLongShort()`.  A copy of the arms annotations is provided
-in the `longShort` list.  The loaded `GBreaks` objects are already annotated.
-
-```{r long_and_short_arms}
-longShort
-longShort$Oki
-gbs$Oki_Osa
+```{r load_packages_and_data}
+library('OikScrambling') |> suppressPackageStartupMessages()
+(genomes <- OikScrambling:::loadAllGenomes())
+(load("BreakPoints.Rdata"))
 ```
 
 ### Phylogenetic cladogram
