--- a/vignettes/RegionWidths.Rmd
+++ b/vignettes/RegionWidths.Rmd
@@ -279,21 +279,41 @@ ggplot(unalMap.w2s) +
 
 ## Width of inverted regions
 
-Many inversions are shorter than 1 kbp.
+We know that we can detect more inversions after coalescing and removing
+translocations (`vignette("Inversions", package = "OikScrambling")`).
+
+Many inversions are shorter than 1 kbp.  Size may differ slightly between long
+and short arms.
 
 ```{r width_of_inversions}
-invs <- sapply(coa, function(gb) filterInversions(flagInversions(gb))) |> SimpleList()
-sapply(invs, length)
+invs.gbs  <- sapply(gbs,  function(gb) filterInversions(flagInversions(gb))) |> SimpleList()
+invs.coa  <- sapply(coa,  function(gb) filterInversions(flagInversions(gb))) |> SimpleList()
+invs.coa2 <- sapply(coa2, function(gb) filterInversions(flagInversions(gb))) |> SimpleList()
+
+sapply(invs.gbs,  length)
+sapply(invs.coa,  length)
+sapply(invs.coa2, length)
 
 # Sanity check that we detect inversions on both strands
-sapply(invs, \(x) {summary(decode(strand(x)))})
+sapply(invs.coa2, \(x) {summary(decode(strand(x)))})
 
-widths$invs <- makeWidthsDF(invs) |> tibble::as_tibble()
+widths$invs.gbs  <- makeWidthsDF(invs.gbs)  |> tibble::as_tibble()
+widths$invs.coa  <- makeWidthsDF(invs.coa)  |> tibble::as_tibble()
+widths$invs.coa2 <- makeWidthsDF(invs.coa2) |> tibble::as_tibble()
 
-gg_freq_poly(widths$invs) +
+gg_freq_poly(widths$invs.gbs) +
   aes(col=Arm) +
-  facet_wrap(~chr, scales = "free_y") +
-  ggtitle("Distribution of alignment widths for inverted regions, split by arm.") +
+  ggtitle("Distribution of alignment widths for inverted regions, using aligned regions, split by arm.") +
+  geom_vline(xintercept = 1000)
+
+gg_freq_poly(widths$invs.coa) +
+  aes(col=Arm) +
+  ggtitle("Distribution of alignment widths for inverted regions, using mapped regions, split by arm.") +
+  geom_vline(xintercept = 1000)
+
+gg_freq_poly(widths$invs.coa2) +
+  aes(col=Arm) +
+  ggtitle("Distribution of alignment widths for inverted regions, using doublemapped regions, split by arm.") +
   geom_vline(xintercept = 1000)
 ```
 
