Add tra2 to the summary.

--- a/vignettes/RepeatRegions.Rmd
+++ b/vignettes/RepeatRegions.Rmd
@@ -371,7 +371,7 @@ countGbsMatchingReps <- function(gb)  sum(sapply(gb$rep, \(x) ! any(is.na(x))))
 summaryMatchingReps <- (sapply(list(aligned    = gbs,     unAligned = unal,
              mapped     = coa,     unMapped  = unmap,
              unAlMapped = unalMap,
-             transposed = tra,
+             transposed = tra,     transposed2 = tra2,
              mapped2    = coa2,    unMapped2 = unmap2),
         fracGbsMatchingReps))
 sapply(summaryMatchingReps |> as.data.frame(), median)
