Correct chunk name

--- a/vignettes/ColinearityInterruptors.Rmd
+++ b/vignettes/ColinearityInterruptors.Rmd
@@ -323,7 +323,7 @@ a2 <- GBreaks(target = GRanges(c(`A+`="T:10-19:+", `B+`="T:20-29:-", `C+`="T:30-
 Let's start with a simpler example, where the inversions happen on the
 _query_ genome.
 
-```{r ROI8.T}
+```{r ROI8.Q}
 exampleDoubleInversion |> plotApairOfChrs()
 
 # Start colinear
