Temporarly fix object structure normalisation.

--- a/vignettes/RegionWidths.Rmd
+++ b/vignettes/RegionWidths.Rmd
@@ -49,6 +49,9 @@ makeWidthsDF <- function (objList) {
   }) |> do.call(what=rbind)
 }
 
+unal <- sapply(unal, \(gb) gb$flag <- NA) |> SimpleList()
+unmap <- sapply(unmap, \(gb) gb$flag <- NA) |> SimpleList()
+
 widths$gbs     <- makeWidthsDF(gbs)     |> tibble::as_tibble()
 widths$unal    <- makeWidthsDF(unal)    |> tibble::as_tibble()
 widths$coa     <- makeWidthsDF(coa)     |> tibble::as_tibble()
