--- a/vignettes/OrthogroupSyntenies.Rmd
+++ b/vignettes/OrthogroupSyntenies.Rmd
@@ -12,90 +12,16 @@ editor_options:
 Load packages and data
 ======================
 
-R packages
-----------
+See `?OikScrambling:::loadAllGenomes`, `?OikScrambling:::loadAllAnnotations`,
+and `vignette("LoadGenomicBreaks", package = "OikScrambling")` for how the
+different objects are prepared.
 
-Install the _GenomicBreaks_ package with:
-
-```
-devtools::install_github("oist/GenomicBreaks")
-```
-
-```{r load_packages}
-suppressPackageStartupMessages({
-  library('BreakpointsData')
-  library('GenomicBreaks')
-  library('BSgenome')
-  library('GenomicFeatures')
-})
-```
-
-BSgenome packages
------------------
-
-Example command to install one _Oikopleura_ BSgenome package if you do not yet
-have it:
-
-```
-install.packages("BSgenome.Odioica.local.OKI2018.I69", repos="https://oist.github.io/plessy_oikgenomes_drat/")
-```
-
-```{r load_BSgenome_packages}
-library("BSgenome.Odioica.local.OKI2018.I69")
-library("BSgenome.Odioica.local.OSKA2016v1.9")
-library("BSgenome.Odioica.local.Bar2.p4")
-library("BSgenome.Odioica.local.KUM.M3")
-library("BSgenome.Odioica.local.AOM.5")
-library("BSgenome.Odioica.local.Odioica.reference.v3.0")
-
-genomes <- SimpleList(
-  # Chromosome assemblies
-  Oki = OKI2018_I69, Osa = OSKA2016v1.9, Bar = Bar2_p4,
-  # Less contiguous assemblies
-  Kum = KUM_M3, Aom = AOM_5, Nor = OdB3)
-
-## Genome lengths
-sapply(genomes, \(g) sum(seqlengths(seqinfo(g))))
-```
-
-Annotations
------------
-
-The annotations from `/bucket/LuscombeU/common/Breakpoints/Annotations` are
-distributed in the same drat repository as the alignment data.
-
-```
-install.packages("BreakpointsData", repos="https://oist.github.io/plessy_oikgenomes_drat/")
-```
-
-```{r load_annotations, warning=FALSE}
-annots <- SimpleList()
-
-gff2txdb <- function(file, genome) {
-  file <- system.file(paste0("extdata/Annotations/", file), package = "BreakpointsData")
-  tx <- rtracklayer::import.gff(file)
-  tx <- tx[seqnames(tx) %in% seqnames(genome)]
-  tx <- GRanges(tx, seqinfo = seqinfo(genome))
-  tx <- GenomicFeatures::makeTxDbFromGRanges(tx)
-}
-
-gff2txdb_Norway <- function(file, genome) {
-  file <- system.file(paste0("extdata/Annotations/", file), package = "BreakpointsData")
-  tx <- rtracklayer::import.gff(file)
-  tx <- tx[!is.na(tx$mRNA)]
-  # Remove "scaffoldA" objects in the OdB3 annotation
-  tx <- tx[seqnames(tx) %in% seqnames(genome)]
-  tx$ID <- tx$mRNA
-  tx <- GRanges(tx, seqinfo = seqinfo(genome))
-  tx <- GenomicFeatures::makeTxDbFromGRanges(tx)
-}
-
-annots$Oki <- gff2txdb("OKI2018_I69.v2/OKI2018_I69.v2.gm.gff.gz",  OKI2018_I69)
-annots$Osa <- gff2txdb("OSKA2016v1.9/OSKA2016v1.9.gm.gff.gz",      OSKA2016v1.9)
-annots$Bar <- gff2txdb("Bar2_p4.Flye/Bar2_p4.Flye.gm.gff.gz",      Bar2_p4)
-annots$Kum <- gff2txdb("KUM-M3-7f/KUM-M3-7f.gm.gff.gz",            KUM_M3)
-annots$Aom <- gff2txdb("AOM-5-5f/AOM-5-5f.gm.gff.gz",              AOM_5)
-annots$Nor <- gff2txdb_Norway("OdB3/Oikopleura_annot_v1.0.gff.gz", OdB3)
+```{r load_packages_and_data}
+library('OikScrambling')   |> suppressPackageStartupMessages()
+library('GenomicFeatures') |> suppressPackageStartupMessages()
+(genomes <- OikScrambling:::loadAllGenomes())
+(annots <- OikScrambling:::loadAllAnnotations() |> suppressWarnings())
+(load("BreakPoints.Rdata"))
 ```
 
 Orthogroups
