--- a/vignettes/OrthogroupSyntenies.Rmd
+++ b/vignettes/OrthogroupSyntenies.Rmd
@@ -229,3 +229,9 @@ sum(width(valid))
 
 Question: what does interrupt the colinearity of nucleotide regions in gene-centric
 colinear regions ?
+
+# Session information
+
+```{r session_information}
+sessionInfo()
+```
