--- a/vignettes/OrthogroupSyntenies.Rmd
+++ b/vignettes/OrthogroupSyntenies.Rmd
@@ -29,14 +29,15 @@ Orthogroups
 
 Load Orthogroups for _Oikopleura_ from the `BreakpointsData` package with the
 `GenomicBreaks::load_one_to_ones()` function.  Original file is in
-`/bucket/LuscombeU/common/Breakpoints/Orthologues/selectedTunicates+Amph+vertebrates_lp_100clstr_blast/OrthoFinder/Results_Sep07/Phylogenetic_Hierarchical_Orthogroups/N6.tsv`.
+`/bucket/LuscombeU/common/Breakpoints/Orthologues/selTun+Apps+Amph+Vert_lp_100clstr_blast/OrthoFinder/Results_Oct07/Phylogenetic_Hierarchical_Orthogroups/N19.tsv`.
+See `news(package = "BreakpointsData")` for inspecting changes in more details.
 
 ```{r load_orthogroups}
 # Example for loading all orthogroups:
-load_one_to_ones(system.file("extdata/OrthoFinder/N6.tsv.gz", package = "BreakpointsData"))
+load_one_to_ones(system.file("extdata/OrthoFinder/N19.tsv", package = "BreakpointsData"))
 
 # Example for loading a pair
-load_one_to_ones( system.file("extdata/OrthoFinder/N6.tsv.gz", package = "BreakpointsData")
+load_one_to_ones( system.file("extdata/OrthoFinder/N19.tsv", package = "BreakpointsData")
                 , c("Bar2_p4.Flye.prot.longest.fa_1", "OSKA2016v1.9.prot.longest.fa_1"))
 ```
 
@@ -47,7 +48,7 @@ Prepare GBreak objects
 ```{r Bar_Osk}
 orthoPairToGBreaks <- function(name1, name2, annot1, annot2) {
   orthoPairs <- load_one_to_ones(
-    system.file("extdata/OrthoFinder/N6.tsv.gz", package = "BreakpointsData"),
+    system.file("extdata/OrthoFinder/N19.tsv", package = "BreakpointsData"),
     c(name1, name2))
 
   IDs2GRanges <- function (IDs, annot) {
